# aoc2015

./: .clang-format  .pre-commit-config.yaml  BUILD  CMakeLists.txt  Dockerfile  MODULE.bazel  crash.cc  crash.h  dec01.cc  dec01_test.cc  dec02.cc  dec02_test.cc  dec03.cc  dec03_test.cc  dec04.cc  dec04_test.cc  dec05.cc  dec05_test.cc  dec06.cc  dec06_test.cc  dec07.cc  dec07_test.cc  dec08.cc  dec08_test.cc  dec09.cc  dec09_test.cc  dec10.cc  dec10_test.cc  dec11.cc  dec11_test.cc  dec12.cc  dec12_test.cc  dec13.cc  dec13_test.cc  dec14.cc  dec14_test.cc  dec15.cc  dec15_test.cc  dec15_z3.cc  dec16.cc  (+14 more)
cmake/: toolchain.cmake
